iRODS Jargon > -15000 errors in remote exec for older version of iRODS	

2011-02-08 07:57:26
iRODS Jargon > Rule works on command line, does not execute via Jargon	

2011-05-02 10:12:47
iRODS Jargon > rule imposed no parallel txfrs - still attempt even when portal opr out indicates 0 threads	2011-07-05 02:26:12

iRODS Jargon > 80600 sql error	2011-03-07 09:20:19

iRODS Jargon > every call to r.getColumn( X ) returns the name of the file as a string	2011-03-07 11:54:20

iRODS Jargon > error looking up user	2011-03-14 03:31:37

iRODS Jargon > transfer engine purge queue broken	2011-05-17 08:25:21

iRODS Jargon > -2700 error in parallel transfer (Solaris mostly) caused by partial read/broken pipe	2011-06-07 11:26:04

iRODS Jargon > fedora 14 broken pipe parallel txfrs	2011-06-22 05:49:57

==Features==


iRODS Jargon > SimpleQuery	2011-01-05 10:51:40

iRODS Jargon > query next result versus offset	2011-01-05 11:03:48

iRODS Jargon > add factroy to user tagging service	2011-02-15 18:48:21

iRODS Jargon > implement permissions methods in IRODSFile using dataobj and coll methods	2011-02-25 06:32:48

iRODS Jargon > add stream2stream helper/access object	2011-04-05 04:58:05

iRODS Jargon > Jargon transfer benchmark facility	2011-02-21 06:37:12

iRODS Jargon > add copy function, addl transfer spec parms	2011-01-27 07:26:28

Bugzilla import - -p and -P options in streaming	2011-02-01 06:38:24

iRODS Jargon > ehnanced ls -la functionality	2011-02-01 06:43:44

iRODS Jargon > user groups in add/query permissions	2011-04-14 14:52:41

iRODS Jargon > Support for optional checksum on transfer	2011-02-18 10:40:06

iRODS Jargon > add callback listener and control block to parallel txfrs, allow cancel/pause in parallel txfr	2011-06-13 06:27:25

iRODS Jargon > add support for getTempPassword API

 [#266] exec ACL support for get/put files
 
 [#176] put/get resource switching - added for put/get as well as input/output iRODS streams, controllable via jargon.properties setting